purpose of exercize

--- a/v1.1_interacting_with_forms.html
+++ b/v1.1_interacting_with_forms.html
@@ -1,3 +1,6 @@
+<!--The purpose of this exercise is to use eventListener so when you click submit it prevents the DEFAULT ACTION so that the page does not reload. Finally, it logs the value of the input field and logs it to the console. 
+    In this case - 1Q84, the title of the book we added-->
+
 <script>
 //In the terminal
 document.forms
